--- a/client/src/index.css
+++ b/client/src/index.css
@@ -136,3 +136,13 @@
   }
 }
 
+
+.hide-scrollbar {
+  -ms-overflow-style: none;  /* สำหรับ Internet Explorer และ Edge */
+  scrollbar-width: none;  /* สำหรับ Firefox */
+}
+
+/* ซ่อนแถบเลื่อนสำหรับ Chrome, Safari และ Opera */
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
